--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   provider: ^4.3.2+2
   http: ^0.12.2
   flutter_secure_storage: ^3.3.4
+  flutter_spinkit: "^4.1.2"
 
 dev_dependencies:
   flutter_test:
